# desafio_soitic

./: CMakeLists.txt  README.md
include/: filme.hpp  locadora.hpp
include/qwidgets/: adicionar.hpp  editar.hpp  erro.hpp  principal.hpp
src/: filme.cpp  locadora.cpp  main.cpp
src/qwidgets/: adicionar.cpp  editar.cpp  erro.cpp  principal.cpp
